# TournaHub

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  results.py  router.py  statistics.py
app/api/v1/routers/: auth.py  tournament.py
app/core/: config.py  dependencies.py  logging.py  security.py  websocket_manager.py
app/crud/: auth.py  tournament.py
app/db/: session.py
app/models/: __init__.py  friendship.py  match.py  tournament.py  tournament_participant.py  user.py
app/schemas/: result.py  statistics.py  tournament.py  user.py
app/services/: auth_service.py  elo_service.py  match_making_servisse.py  oauth_service.py  result_service.py  statistics_service.py  tournament_service.py
migrations/: env.py
migrations/versions/: 439ed0b7a313_add_oauth_provider_defaul_elo.py  49bd04695453_create_user_match_tournament_friendship.py  7db7cdaffd0f_add_oauth_id.py  94d8adf331b3_fix_models.py  9bcbc608f569_add_refresh_token_for_user.py  a872b22e5273_add_nullable_for_user_password.py  b1c2d3e4f5a6_add_bracket_fields.py  c3d4e5f6a7b8_game_type_array.py  ecbfa3277e51_owner_id_tournament.py
tests/: test_statistics.py
tests/match_making_servisse/: test_match.py
tests/test_auth_service/: test_login.py  test_register.py
tests/test_elo_service/: test_elo.py
tests/test_oauth_service/: test_ouath.py
tests/test_tournament_create/: test_tournament.py
