[project]
name = "tournahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "utc>=0.0.3",
]